# Twitcord

./: .Dockerignore  .env  .pdm.toml  Dockerfile  README.md  Terms of Service.md  i18n.pot  main-zh.py  main.py  pyproject.toml
locale/en_US/LC_MESSAGES/: en_US.mo  en_US.po
locale/zh_CN/LC_MESSAGES/: zh_CN.mo  zh_CN.po
locale/zh_TW/LC_MESSAGES/: zh_TW.mo  zh_TW.po
