[project]
name = ""
version = ""
description = ""
authors = [
    {name = "NightFeather", email = "leolee50910@gmail.com"},
]
dependencies = [
    "nextcord[speed]>=2.1.0",
    "tweepy>=4.10.1",
    "python-dotenv>=0.21.0",
    "matplotlib>=3.5.3",
    "setuptools>=65.3.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
